k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbnb-db-deployment
  labels:
    app: airbnb
    component: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airbnb
      component: db
  template:
    metadata:
      labels:
        app: airbnb
        component: db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
