k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: airbnb
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: api
  selector:
    app: airbnb
    component: backend
