k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbnb-db-service
  labels:
    app: airbnb
    component: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: airbnb
    component: db
