k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          # Route all base traffic to the Nginx frontend container
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
